--- a/todo.org
+++ b/todo.org
@@ -6,6 +6,10 @@
 Clog TODOs
 
 * For 1.0
+** TODO command-line clog script tasks
+*** TODO install/upgrade jar
+*** TODO create empty blog
+*** TODO create new post
 ** DONE Separate /public from this repository
 ** INPROGRESS Config file
 *** INPROGRESS Sane default file
